tests/rosetta/out/Java/call-a-function-5.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:32:45Z
// call-a-function-5.mochi
import java.util.*;

public class CallAFunction5 {
    static int doIt(Map<String,Integer> p) {
        int b = 0;
        if (p.containsKey("b")) {
            b = (int)(p.get("b"));
        }
        return ((Number)((Number)p.get("a")).doubleValue() + b).doubleValue() + ((Number)p.get("c")).doubleValue();
    }
    static void main() {
        Map<String,Integer> p = new LinkedHashMap<String,Integer>();
        p.put("a", 1);
        p.put("c", 9);
        System.out.println(String.valueOf(doIt(p)));
    }
    static <K,V> Map.Entry<K,V> entry(K k, V v) { return new AbstractMap.SimpleEntry<>(k, v); }
    static <K,V> LinkedHashMap<K,V> mapOfEntries(Map.Entry<? extends K,? extends V>... entries) {
        LinkedHashMap<K,V> m = new LinkedHashMap<>();
        for (var e : entries) m.put(e.getKey(), e.getValue());
        return m;
    }
    public static void main(String[] args) {
    main();
    }
}
